--- a/lib/assets/strings/app_ru.arb
+++ b/lib/assets/strings/app_ru.arb
@@ -1,3 +1,7 @@
 {
-  "app_name": "Свайп"
+  "app_name": "свайп",
+  "app_subtitle": "Открой доступ к самой полной базе рынка квартир в Сочи!",
+  "log_in": "Войти",
+  "firs_time_question": "Впервые у нас?",
+  "register": "Регистрация"
 }
