added log in screen

--- a/lib/assets/strings/app_ru.arb
+++ b/lib/assets/strings/app_ru.arb
@@ -3,5 +3,9 @@
   "app_subtitle": "Открой доступ к самой полной базе рынка квартир в Сочи!",
   "log_in": "Войти",
   "firs_time_question": "Впервые у нас?",
-  "register": "Регистрация"
+  "register": "Регистрация",
+  "proceed": "Далее",
+  "phone_hint": "Телефон",
+  "enter_valid_phone_number": "Пожалуйста, введите действительный номер телефона",
+  "enter_code": "Введите код который мы отправили на указаный вами номер телефона"
 }
